<resources>
    <string name="app_name">MedCare</string>
    <string name="tv_login_register">Didn\'t have an account ? Register</string>
    <string name="lg_username">Username</string>
    <string name="lg_Password">Password</string>
    <string name="tv_copyrights">\@2021 Copyrights</string>
    <string name="lg_Email">Email</string>
    <string name="btn_Login">LOGIN</string>
    <string name="tv_loginHeader">Login</string>
    <string name="lg_header">Login</string>
    <string name="Lemail">Email</string>
    <string name="Lpass">Password</string>
    <string name="login">Sign In</string>
    <string name="login_register">Did not have an Account? Register</string>
    <string name="loading">We Care All Ways</string>
    <string name="loading_IV">Loading</string>
    <string name="tv_register">Register</string>
    <string name="Uname">User Name</string>
    <string name="Age">Age</string>
    <string name="contct">Contact Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="gotologin">Already have an account...</string>
    <string name="pharmacy_add">Add New Item</string>
    <string name="drugURL">Drug Image URL</string>
    <string name="drugID">Drug ID</string>
    <string name="drugName">Drug Name</string>
    <string name="drugPrice">Drug Price</string>
    <string name="drugDescription">Drug Description</string>
    <string name="drugadd">Add Drug Details</string>
    <string name="pharmacy_Edit">Edit Drug Details</string>
    <string name="drugedit">Edit Drug</string>
    <string name="drugdelete">Delete</string>
    <string name="add_button">Add Items</string>
    <string name="pharmacy_btnEdit">Edit Item</string>
    <string name="cuslog">Customer Login</string>
    <string name="adminlog">Admin Login</string>
    <string name="CH_appoint">Appointments</string>
    <string name="CH_pha">Pharmacy</string>
    <string name="CH_Pay">Payments</string>
    <string name="CH_logout">Logout</string>
    <string name="CH_logo">Logo</string>
    <string name="CH_logoname">Logo Name</string>
    <string name="AH_Doctors">Doctors</string>
    <string name="name">Dr.Arjuna Herath</string>
    <string name="special">Dental Surgeon</string>
    <string name="time">WeekDays - 8.00AM/7.00PM</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="updatedocid">Doctor ID</string>
    <string name="updatedocName">Doctor Name</string>
    <string name="updatedocAge">Age</string>
    <string name="updatedocCoatcat">Contact</string>
    <string name="updatedocAddress">Address</string>
    <string name="updatedocSpecialist">Specialist For</string>
    <string name="updatedocTime">Time</string>
    <string name="updatedocprice">Appointment Charge</string>
    <string name="update">Update Details</string>
    <string name="docid">Doctor ID</string>
    <string name="docName">Doctor Name</string>
    <string name="docAge">Age</string>
    <string name="docCoatcat">Contact</string>
    <string name="docAddress">Address</string>
    <string name="docSpecialist">Specialist For</string>
    <string name="docTime">Time</string>
    <string name="docappointmentPrice">Appointment Charge</string>
    <string name="docadd">Add Doctor Details</string>
    <string name="addnewheading">Add New Doctor</string>
    <string name="button">Go to Appointment list</string>
</resources>