<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddDoctor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/addnewheading"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/docid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docid"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/docName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/docAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docAge"
        android:inputType="number" />

    <EditText
        android:id="@+id/docCoatcat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docCoatcat"
        android:inputType="number" />

    <EditText
        android:id="@+id/docAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docAddress"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/docSpecialist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docSpecialist"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/docTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docTime"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/docappointmentPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/docappointmentPrice"
        android:inputType="number" />

    <Button
        android:id="@+id/docadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/docadd"
        android:textColor="@color/white"
        app:backgroundTint="@color/btn"
        app:cornerRadius="15dp" />
</LinearLayout>