<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddDoctor">

    <EditText
        android:id="@+id/updatedocid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocid"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updatedocName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updatedocAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocAge"
        android:inputType="number" />

    <EditText
        android:id="@+id/updatedocCoatcat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocCoatcat"
        android:inputType="number" />

    <EditText
        android:id="@+id/updatedocAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocAddress"
        android:inputType="text" />

    <EditText
        android:id="@+id/updatedocSpecialist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocSpecialist"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updatedocTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocTime"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updatedocprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/updatedocprice"
        android:inputType="number" />

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/update"
        android:textColor="@color/white"
        app:backgroundTint="@color/btn"
        app:cornerRadius="15dp" />
</LinearLayout>