<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="#F8CCFF"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <ImageView
            android:id="@+id/iv_mydoc2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/doctor" />

        <TextView
            android:id="@+id/name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/special"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/special"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="130dp"
            android:gravity="center_horizontal"
            android:text="@string/time"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="10dp"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/btn"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            app:backgroundTint="@android:color/holo_red_light"
            app:cornerRadius="20dp" />

    </androidx.cardview.widget.CardView>
</RelativeLayout>