<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/theme_color">

    <TextView
        android:id="@+id/drugName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/drugName"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/drugImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/drugName"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/drugName"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/drugDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/drugName"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/drugImage"
        android:layout_toRightOf="@id/drugImage"
        android:padding="3dp"
        android:text="@string/drugDescription" />

    <TextView
        android:id="@+id/drugPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/drugDescription"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/drugImage"
        android:layout_toRightOf="@id/drugImage"
        android:padding="10dp"
        android:text="@string/drugPrice"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pharmacy_btnEdit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/drugImage"
        android:layout_centerInParent="true"
        android:text="@string/pharmacy_btnEdit"
        app:backgroundTint="@color/purple_700"
        app:cornerRadius="15dp" />

</RelativeLayout>